syntax = "proto3";

package todo.v1;

option go_package = "todo-list-app/internal/proto/v1;v1";

import "third_party/google/api/annotations.proto";

service Authorization {
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string accessToken = 1;
  int64 expiredTime = 2;
}
